@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
}

class EnderecoPostal {
  -String local
  -String codPostal
  -String localidade
}

class Utilizador {
  -String nome
  -String email
  -String password
}

class AlgoritmoExternoGeracaoPwd {
}

Plataforma "1" -- "*" Organizacao : tem registadas >
Plataforma "1" -- "1" AlgoritmoExternoGeracaoPwd : recorre a >

Organizacao "1" -- "1..*" Colaborador: tem >
Organizacao "1" -- "1" Colaborador: tem gestor >
Organizacao "0..1" -- "1" EnderecoPostal: localizada em >

Colaborador "0..1" -- "1" Utilizador: atua como >

AlgoritmoExternoGeracaoPwd "1" -- "*" Utilizador : gera password >
@enduml
